--- a/_config.yml
+++ b/_config.yml
@@ -69,8 +69,9 @@ theme: next
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
-
+  type: git
+  repository: git@github.com:sundiontheway/sundiontheway.github.io.git
+  branch: master
 
 # =============================================================================
 # NexT Theme configuration
