--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Steve Sun's Blog
+title: way2steve
 subtitle: The way to be Steve
-description:
+description: The way to be Steve
 author: Steve D. Sun
 language: zh-Hans
 timezone:
