--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,9 @@ author: Steve D. Sun
 language: zh-Hans
 timezone:
 
+# head image
+avatar: /image/sund.jpg
+
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://www.v2steve.com
