--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -21,8 +21,8 @@ rss:
 # Icon fonts
 # Place your font into next/source/fonts, specify directory-name and font-name here
 # Avialable: default | linecons | fifty-shades | feather
-icon_font: default
-#icon_font: fifty-shades
+#icon_font: default
+icon_font: fifty-shades
 #icon_font: feather
 #icon_font: linecons
 
@@ -37,7 +37,7 @@ mathjax:
 
 
 # Schemes
-scheme: Mist
+#scheme: Mist
 
 
 # Sidebar, available value:
