--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,9 @@ deploy:
 # NexT Theme configuration
 # =============================================================================
 
+duoshuo_shortname: v2steve
 # DISQUS 帐号 （如果已经设置 多说 帐号，此选项将被跳过）
-disqus_shortname: v2steve
+# disqus_shortname: v2steve
 
 # JiaThis 分享服务
 jiathis: true
