--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -22,9 +22,9 @@ rss:
 # Place your font into next/source/fonts, specify directory-name and font-name here
 # Avialable: default | linecons | fifty-shades | feather
 #icon_font: default
-icon_font: fifty-shades
+#icon_font: fifty-shades
 #icon_font: feather
-#icon_font: linecons
+icon_font: linecons
 
 # Code Highlight theme
 # Available value: normal | night | night eighties | night blue | night bright
@@ -37,7 +37,7 @@ mathjax:
 
 
 # Schemes
-#scheme: Mist
+# scheme: Mist
 
 
 # Sidebar, available value:
@@ -58,7 +58,7 @@ toc_list_number: true
 
 # Automatically Excerpt
 auto_excerpt:
-  enable: false
+  enable: true
   length: 450
 
 # Use Lato font
