--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 # Site
 title: way2steve
-subtitle: The Journey is the Reward.
-description: The trush of my mind.
-author: Steve D. Sun
+subtitle: The way to Steve.
+description: Food for Thought.
+author: $teve D. Sun
 language: zh-Hans
 timezone:
 
