--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ jiathis: true
 # 社交链接，将在侧栏中显示
 social:
   GitHub: http://github.com/sundiontheway
-  twitter: https://twitter.com/way2steve
+  Twitter: https://twitter.com/way2steve
 
 
 # Creative Commons 4.0 International License.
