--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ source_dir: source
 public_dir: public
 tag_dir: tags
 archive_dir: archives
-# category_dir: categories
+category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
@@ -109,6 +109,12 @@ google_analytics: UA-64688885-1
 
 # 站点起始时间
 since: 2013
+
+# hexo sitemap网站地图
+sitemap:
+path: sitemap.xml
+#baidusitemap:
+#path: baidusitemap.xml
 
 # =============================================================================
 # End NexT Theme configuration
