--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: way2steve
-subtitle: The way to Steve.
-description: Food for Thought.
+subtitle: Food for Thought.
+description: Sing a little bit of these workingman's blues.
 author: $teve D. Sun
 language: zh-Hans
 timezone:
