--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: way2steve
 subtitle: Food for Thought.
-description: Sing a little bit of these workingman's blues.
+description: A little bit of workingman's blues.
 author: $teve D. Sun
 language: zh-Hans
 timezone:
