--- a/themes/aero-dual/_config.yml
+++ b/themes/aero-dual/_config.yml
@@ -21,7 +21,7 @@ use_header_cover: true
 # or
 # Specify an online resource like so:
 # index_cover: http://somewhere.com/path/to/banner.jpg
-index_cover: /img/default-banner-dark.jpg
+index_cover: /img/banner.jpg
 
 widgets:
 - category
