--- a/_config.yml
+++ b/_config.yml
@@ -42,9 +42,9 @@ relative_link: false
 future: true
 highlight:
   enable: true
-  line_number: true
+  line_number: false
   auto_detect: true
-  tab_replace:
+  tab_replace: true
 
 # Category & Tag
 default_category: uncategorized
@@ -64,9 +64,7 @@ per_page: 10
 pagination_dir: page
 
 # Extensions
-#theme: next
-theme: aero-dual
-#theme_style: dark
+theme: next
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
@@ -79,9 +77,9 @@ deploy:
 # NexT Theme configuration
 # =============================================================================
 
-#duoshuo_shortname: v2steve
+duoshuo_shortname: v2steve
 # DISQUS 帐号 （如果已经设置 多说 帐号，此选项将被跳过）
-disqus_shortname: v2steve
+#disqus_shortname: v2steve
 
 # JiaThis 分享服务
 jiathis: true
@@ -89,7 +87,6 @@ jiathis: true
 # 社交链接，将在侧栏中显示
 social:
   GitHub: http://github.com/sundiontheway
-  Twitter: https://twitter.com/way2steve
 
 
 # Creative Commons 4.0 International License.
