--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -205,7 +205,7 @@ highlight_theme: normal
 
 
 # Automatically scroll page to section which is under <!-- more --> mark.
-scroll_to_more: true
+scroll_to_more: false
 
 
 # Automatically Excerpt. Not recommand.
