--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ per_page: 10
 pagination_dir: page
 
 # Extensions
-theme: cactus-dark
+theme: even
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
