--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-pagination": "^0.1.0",
     "hexo-renderer-ejs": "^0.1.0",
     "hexo-renderer-marked": "^0.2.4",
+    "hexo-renderer-scss": "^1.0.2",
     "hexo-renderer-stylus": "^0.2.0",
     "hexo-server": "^0.1.2"
   }
