--- a/_config.yml
+++ b/_config.yml
@@ -109,9 +109,15 @@ since: 2013
 # hexo sitemap网站地图
 sitemap:
 path: sitemap.xml
-#baidusitemap:
-#path: baidusitemap.xml
 
+#RSS订阅
+plugin:
+- hexo-generator-feed
+#Feed Atom
+feed:
+type: atom
+path: atom.xml
+limit: 20
 # =============================================================================
 # End NexT Theme configuration
 # =============================================================================
