--- a/backups/even._config.yml
+++ b/backups/even._config.yml
@@ -26,6 +26,9 @@ menu:
 # site search option
 search: false
 
+# Fancybox
+fancybox: true
+
 # ===========================================
 # Theme Settings
 # ===========================================
