--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.2.2"
+    "version": "3.3.8"
   },
   "dependencies": {
     "hexo": "^3.1.1",
+    "hexo-browsersync": "^0.2.0",
     "hexo-deployer-git": "0.0.4",
-    "hexo-generator-archive": "^0.1.2",
+    "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.2",
     "hexo-generator-feed": "^1.2.0",
     "hexo-generator-index": "^0.1.2",
-    "hexo-generator-sitemap": "^1.1.2",
+    "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.1.1",
     "hexo-pagination": "^0.1.0",
     "hexo-renderer-ejs": "^0.1.0",
+    "hexo-renderer-jade": "^0.4.1",
     "hexo-renderer-marked": "^0.2.4",
     "hexo-renderer-scss": "^1.0.2",
     "hexo-renderer-stylus": "^0.2.0",
