change front page

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ avatar: /image/sund.jpg
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://www.sund.site/archives
+url: http://www.sund.site
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
